# wintermute

./: .env.example  .gitignore  AGENTS.md  OPENMEMORY_SETUP.md  VOICE_INTEGRATION_COMPLETE.md  VOICE_POC_README.md  VOICE_SUCCESS.md  check_services.py  demo.py  docker-compose.yml  install_voice_deps.sh  pyproject.toml  start_openmemory_local.sh  stt_demo.py  voice_poc.py  wintermute_memories.json  wintermute_memories_init.py
characters/: default.json
docs/: AUDIO_IO_RESEARCH.md  COMPLETED.md  OPENMEMORY_SETUP.md  PHASE1_AND_PHASE2_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  VOICE_POC_STATUS.md
personas/: creative.json  default.json  technical.json
src/wintermute/: app.py
src/wintermute/models/: character.py  message.py  persona.py
src/wintermute/services/: __init__.py  audio_service.py  character_manager.py  memory_client.py  message_handler.py  ollama_client.py  persona_manager.py  voice_client.py
src/wintermute/ui/: character_pane.py  character_wizard.py  chat_pane.py  memory_pane.py  persona_pane.py  status_pane.py
src/wintermute/utils/: config.py
tests/: conftest.py  test_app.py
tests/test_models/: test_character.py  test_message.py  test_persona.py
tests/test_services/: test_audio_service.py  test_character_manager.py  test_memory_client.py  test_ollama_client.py  test_persona_manager.py
tests/test_ui/: test_character_pane.py  test_chat_pane.py  test_persona_pane.py  test_status_pane.py
tests/test_utils/: test_config.py
